[project]
name = "rivtlib"
version = "0.5.0"
description = "install rivtlib package or complete rivt project as extra"
authors = [{ name = "rod holland", email = "rod.h.holland@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    "tabulate>=0.9.0",
    "pillow>=11.2.1",
    "docutils>=0.21.2",
    "matplotlib>=3.10.1",
    "sympy>=1.13.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "jupyterlab>=4.4.1",
]

