[project]
name = "rivtlib"
version = "0.5.0"
description = "install rivtlib package or complete rivt project as extra"
authors = [{ name = "rod holland", email = "rod.h.holland@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    "tabulate>=0.9.0",
    "pillow>=11.2.1",
    "docutils>=0.21.2",
    "matplotlib>=3.10.1",
    "sympy>=1.13.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "Sphinx>=8.2.3",
    "pydata-sphinx-theme>=0.16.1",
    "reportlab>=4.4.0",
    "rst2pdf>=0.103.1",
    "pypdf>=1.0.3",
]

