[project]
name = "rivtlib"
version = "0.5.0"
description = "install rivtlib project"
authors = [{ name = "rod holland", email = "rholland@structurelabs.com" }]
requires-python = ">=3.11"

dependencies = [
    "tabulate>=0.9.0",
    "pillow>=11.2.1",
    "matplotlib>=3.10.1",
    "sympy>=1.13.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "docutils>=0.21.2",
    "ipython>=8.16.2",
    "ipykernel>=6.28.1",
    "reportlab>=4.4.0",
    "rst2pdf>=0.103.1",
    "pypdf>=1.0.3",
    "Sphinx>=8.2.3",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx_design>=0.6.1",
    "sphinx-favicon>=1.0.1",
    "sphinx-togglebutton>=0.3.2",
    "sphinxcontrib-applehelp>=2.0.0",
    "sphinxcontrib-devhelp>=2.0.0",
    "sphinxcontrib-email>=0.3.6",
    "sphinxcontrib-htmlhelp>=2.1.0",
    "sphinxcontrib-jquery>=4.1",
    "sphinxcontrib-jsmath>=1.0.1",
    "sphinxcontrib-qthelp>=2.0.0",
    "sphinxcontrib-serializinghtml>=2.0.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.ruff]
line-length = 80
